--- a/Conference-LaTeX-template_10-17-19/conference_101719.tex
+++ b/Conference-LaTeX-template_10-17-19/conference_101719.tex
@@ -58,20 +58,20 @@ In our work, we called the aspect and opinion list as domain-specific lexicon be
 The rest of the paper is organized as follows: Section two discusses the works related to our research, sections three and four discuss the detail of the development and usage of domain-specific lexicons, while sections five and six discuss the experiments and results of the experiments. The final section discusses the conclusion. 
 
 \section{Related Work}
-The term ``domain-specific lexicon" has been used in natural language processing and information access research to describe a lexicon consisting of terms pertaining to a given domain or discipline [3]. Because the manual generation of domain-specific lexicon is expensive, researchers are developing ways to build domain-specific lexicons automatically. 
+The term ``domain-specific lexicon" has been used in natural language processing and information access research to describe a lexicon consisting of terms pertaining to a given domain or discipline \cite{b3}. Because the manual generation of domain-specific lexicon is expensive, researchers are developing ways to build domain-specific lexicons automatically. 
 
-There are several fields of research that are related with the development of domain-specific lexicon: research in automatic domain-specific term extraction [3], [4], [5], [6], domain-specific sentiment lexicon induction [7], [8], and specialized dictionary development [9]. The first field of research focuses on the automatic domain-specific term extraction, which is a categorization or classification task in which a term would be categorized into a previously determined domain [4]. This task could be done in unsupervised [3], [4], [5] or supervised way [6]. The resulting lexicon in this kind of research is usually only consisted of noun terms.
+There are several fields of research that are related with the development of domain-specific lexicon: research in automatic domain-specific term extraction \cite{b3}, \cite{b4}, \cite{b5}, \cite{b6}, domain-specific sentiment lexicon induction \cite{b7}, \cite{b8}, and specialized dictionary development \cite{b9}. The first field of research focuses on the automatic domain-specific term extraction, which is a categorization or classification task in which a term would be categorized into a previously determined domain \cite{b4}. This task could be done in unsupervised \cite{b3}, \cite{b4}, \cite{b5} or supervised way \cite{b6}. The resulting lexicon in this kind of research is usually only consisted of noun terms.
 
 The second field of research related to our work is research about domain-specific sentiment lexicon induction, in which the lexicons are created with the intention to be used in ABSA. This is aligned with our intention of use, but there is an important difference: domain-specific sentiment lexicon is used in the polarity identification step while our domain-specific lexicon is used in the aspect extraction step. Because it is a type of sentiment lexicon, the lexicon is usually only consisted of opinions.
 
-The final field of research related to our work is about the development of specialized dictionary. As described in the work of Grefenstette and Muchemi [9], specialized dictionary is a lexicon containing domain-specific words that can be used to understand the concepts of a domain. To build specialized dictionary, Grefenstette and Muchemi used word embedding that is trained on domain-specific corpora. The end results of specialized dictionary development are quite alike with what we have in mind, therefore we used the adaptation of this approach in our implementation.
+The final field of research related to our work is about the development of specialized dictionary. As described in the work of Grefenstette and Muchemi \cite{b9}, specialized dictionary is a lexicon containing domain-specific words that can be used to understand the concepts of a domain. To build specialized dictionary, Grefenstette and Muchemi used word embedding that is trained on domain-specific corpora. The end results of specialized dictionary development are quite alike with what we have in mind, therefore we used the adaptation of this approach in our implementation.
 
-Domain-specific lexicons are used in ABSA for aspect extraction task [10], [11]. Zhuang et al. [10] used domain-specific lexicons to extract opinion pairs in a sentence, before checking the validity of each opinion pair by matching the dependency path between them with a predefined dependency relation template. Chauhan and Meena [11] used domain-specific lexicons to filter out less prominent aspect terms. The methods of filtering that are used in the study are frequency and similarity-based filtering.
+Domain-specific lexicons are used in ABSA for aspect extraction task \cite{b10}, \cite{b11}. Zhuang et al. \cite{b10} used domain-specific lexicons to extract opinion pairs in a sentence, before checking the validity of each opinion pair by matching the dependency path between them with a predefined dependency relation template. Chauhan and Meena \cite{b11} used domain-specific lexicons to filter out less prominent aspect terms. The methods of filtering that are used in the study are frequency and similarity-based filtering.
 
-Moreover, domain-specific lexicons are also used for aspect categorization task [12], [13]. An example of this is the work of Anand and Naorem [12], in which domain-specific lexicons are used to map aspects into their corresponding categories. Another example is the work of Mukherjee and Liu [13], in which domain-specific lexicons are used as seeds for a statistical model to aid the process of grouping semantically related terms in the same aspect category.
+Moreover, domain-specific lexicons are also used for aspect categorization task \cite{b12}, \cite{b13}. An example of this is the work of Anand and Naorem \cite{b12}, in which domain-specific lexicons are used to map aspects into their corresponding categories. Another example is the work of Mukherjee and Liu \cite{b13}, in which domain-specific lexicons are used as seeds for a statistical model to aid the process of grouping semantically related terms in the same aspect category.
 
 \section{Overview of the Development and Usage of Domain-Specific Lexicon}
-The system that we used to build domain-specific lexicons is adapted from the works of Grefenstette and Muchemi [9]. The general architecture of the adapted system is shown in Fig.~\ref{fig1}. At first, we used ACHE web crawler\footnote{ACHE: https://github.com/VIDA-NYU/ache} to collect domain-specific corpus. After that, we preprocessed the corpus and used it to build domain-specific word embedding using sense2vec [14]. At the end of the development steps, we used the resulting word embedding to build a classifier for domain-specific words extraction.
+The system that we used to build domain-specific lexicons is adapted from the works of Grefenstette and Muchemi \cite{b9}. The general architecture of the adapted system is shown in Fig.~\ref{fig1}. At first, we used ACHE web crawler\footnote{ACHE: https://github.com/VIDA-NYU/ache} to collect domain-specific corpus. After that, we preprocessed the corpus and used it to build domain-specific word embedding using sense2vec \cite{b14}. At the end of the development steps, we used the resulting word embedding to build a classifier for domain-specific words extraction.
 
 Fig.~\ref{fig2} shows the modified aspect - opinion extraction process. The difference from the original process lies in the aspect-opinion expression extraction. In the modified process, we replaced the aspect and opinion list with domain-specific lexicon. We also replaced the word embedding used for similarity checking between lexicon and the candidate word with our pretrained sense2vec.
 
@@ -120,7 +120,7 @@ We preprocessed each sentence using a pretrained model from spaCy\footnote{spaCy
 
 \begin{figure}[htbp]
 \centerline{\includegraphics[width=0.47\textwidth]{fig3.png}}
-\caption{The process of building a Doc [18].}
+\caption{The process of building a Doc \cite{b18}.}
 \label{fig3}
 \end{figure}
 
@@ -177,17 +177,17 @@ To build a domain-specific word embedding, we used an implementation of sense2ve
 At first, we manually labelled every unique word in the preprocessed text into three classes: aspect, opinion, and other (neither an aspect nor an opinion). Then, we used the following approach to choose the words for test data, while the rest of the words were used as the train data:
 
 \subsubsection{Using Term Frequency Only}
-In this approach, we used 1000 most frequent words as the test data. Examples of the resulting domain-specific lexicons are shown in Table II.
+In this approach, we used 1000 most frequent words as the test data. Examples of the resulting domain-specific lexicons are shown in Table~\ref{tab2}.
 
 \subsubsection{Using Term Frequency and Cosine Similarity}
-First, we chose 50 most frequent words as the seed words. Next, we expand the seed words using 20 most similar words from each seed. The number of most frequent and most similar words were chosen arbitrarily. Table III shows the resulting domain-specific lexicon.
+First, we chose 50 most frequent words as the seed words. Next, we expand the seed words using 20 most similar words from each seed. The number of most frequent and most similar words were chosen arbitrarily. Table~\ref{tab3} shows the resulting domain-specific lexicon.
 
 \subsection{Domain-Specific Word Classification}
 After separating train and test data, we classified the words in the test data into their respective classes using supervised and unsupervised approach. The explanations for each approach are as follows:
 
 \subsubsection{Supervised Approach}
 \paragraph{SVM Classifier with RBF Kernel}
-This classifier was chosen because of its proven ability to produce good results on text classification tasks [15]. For the feature, we used normalized word vectors.
+This classifier was chosen because of its proven ability to produce good results on text classification tasks \cite{b15}. For the feature, we used normalized word vectors.
 
 \begin{table*}[htbp]
 \caption{Examples of Domain-Specific Lexicon Created Using Term Frequency}
@@ -246,7 +246,7 @@ In this approach, we clustered the word vectors in train data using K-Means and 
 \section{Experiments}
 
 \subsection{Experiments on Word Classification}
-The experiments on word classification were conducted on three domains: digital camera, handphone, and restaurant. In the word classification task, we aimed to classify each word to aspect, opinion, and other class. The statistics of each domains are listed on Table IV.
+The experiments on word classification were conducted on three domains: digital camera, handphone, and restaurant. In the word classification task, we aimed to classify each word to aspect, opinion, and other class. The statistics of each domains are listed on Table~\ref{tab4}.
 
 \begin{table}[htbp]
 \caption{Word Classification Dataset Statistics}
@@ -271,95 +271,95 @@ Digital camera&8057&2540&3122&372&203&425 \\
 
 To evaluate the experiments, we used multiple metrics such as F1 score, accuracy, and Adjusted Rand Index (ARI) The F1 score and accuracy were used as the metrics for the supervised classification while ARI was used as the metric for the unsupervised classification. F1 score was chosen because of the imbalance in the datasets. By using F1 score, we hoped to see whether each class could be classified correctly or not. The results of the experiments are as follows:
 
-\subsubsection{Experiments on Unsupervised Classification with KMeans and K-Medoids}
-The ARI score was computed using the class labels and the predicted labels. The maximum ARI score is one if the clusters between class labels and predicted labels are identical. Table V shows that the resulting ARIs that we obtained are mostly near zero, meaning that our results are almost equal to the results of random clustering. Some of the ARI scores are even lower than zero, less than what is expected from a random result. There are no significant differences between the ARI scores of K-Means and K-Medoids.
+\subsubsection{Experiments on Unsupervised Classification with K-Means and K-Medoids}
+The ARI score was computed using the class labels and the predicted labels. The maximum ARI score is one if the clusters between class labels and predicted labels are identical. Table~\ref{tab5} shows that the resulting ARIs that we obtained are mostly near zero, meaning that our results are almost equal to the results of random clustering. Some of the scores are even lower than zero, less than what is expected from a random result. There are no significant differences between the ARI scores of K-Means and K-Medoids.
 
 \begin{table}[htbp]
 \caption{Experimental Results of Unsupervised Word Classification}
 \begin{center}
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|}
 \hline
-\textbf{Model}&\textbf{Feature Size}&\textbf{Domain}&\multicolumn{3}{|c|}{\textbf{Train Data}}&\multicolumn{3}{|c|}{\textbf{Test Data}}\\
-\cline{4-9}
-& & & \textbf{\textit{A}}& \textbf{\textit{B}}&\textbf{\textit{C}}& \textbf{\textit{A}}&\textbf{\textit{B}}& \textbf{\textit{C}}\\
+\textbf{Model}&\textbf{Feature}&\textbf{Domain}&\multicolumn{2}{|c|}{\textbf{ARI Score}}\\
+\cline{4-5}
+&\textbf{Size}& & \textbf{\textit{K-Means}}&\textbf{\textit{K-Medoids}}\\
 \hline
-CBOW&300&Restaurant&9335&2885&2742&428&252&320 \\
+CBOW&300&Restaurant&0.039&\textbf{0.048} \\
+\cline{3-5}
+&&Handphone&0.014&-0.004 \\
+\cline{3-5}
+&&Digital camera&0.019&0.010 \\
+\cline{2-5}
+&400&Restaurant&\textbf{0.040}&0.041 \\
+\cline{3-5}
+&&Handphone&0.012&-0.003 \\
+\cline{3-5}
+&&Digital camera&0.019&0.008 \\
 \hline
-&&Handphone&8701&3009&3231&431&219&350 \\
-\hline
-&&Digital camera&8057&2540&3122&372&203&425 \\
-\hline
-&400&Restaurant&9335&2885&2742&428&252&320 \\
-\hline
-&&Handphone&8701&3009&3231&431&219&350 \\
-\hline
-&&Digital camera&8057&2540&3122&372&203&425 \\
-\hline
-Skip-gram&300&Restaurant&9335&2885&2742&428&252&320 \\
-\hline
-&&Handphone&8701&3009&3231&431&219&350 \\
-\hline
-&&Digital camera&8057&2540&3122&372&203&425 \\
-\hline
-&400&Restaurant&9335&2885&2742&428&252&320 \\
-\hline
-&&Handphone&8701&3009&3231&431&219&350 \\
-\hline
-&&Digital camera&8057&2540&3122&372&203&425 \\
+Skip-gram&300&Restaurant&0.031&0.018 \\
+\cline{3-5}
+&&Handphone&0.024&\textbf{0.025} \\
+\cline{3-5}
+&&Digital camera&\textbf{0.034}&\textbf{0.040} \\
+\cline{2-5}
+&400&Restaurant&0.027&0.016 \\
+\cline{3-5}
+&&Handphone&\textbf{0.025}&0.012 \\
+\cline{3-5}
+&&Digital camera&0.033&0.023 \\
 \hline
 \end{tabular}
-\label{tab4}
+\label{tab5}
 \end{center}
 \end{table}
 
 \subsubsection{Experiments on Supervised Classification with Cosine Similarity}
-Based on the results displayed on Table VI, we could see that other than the classification on the restaurant domain with CBOW model, the accuracies of classification with word vectors of size 300 as the feature are higher than classification with word vectors of size 400. In the restaurant and digital camera domain, the use of Skip-gram model has given us better results than CBOW model, but in the handphone domain the reverse is true. 
+Based on the results displayed on Table~\ref{tab6}, we could see that other than the classification on the restaurant domain with CBOW model, the accuracies of classification with word vectors of size 300 as the feature are higher than classification with word vectors of size 400. In the restaurant and digital camera domain, the use of Skip-gram model has given us better results than CBOW model, but in the handphone domain the reverse is true. 
 
 \subsubsection{Experiments on Supervised Classification with SVM Classifier}
-In Table VI, we could see that the use of word vector created by CBOW model has given us better results than Skip-gram model. In all experiments other than the experiments in handphone domain by using word vectors created by Skip-gram model, the use of word vectors of size 300 results in better accuracy than using word vectors of size 400. In every domain, the highest accuracies are achieved by using word vectors of size 300 created by CBOW model.
+In Table~\ref{tab6}, we could see that the use of word vector created by CBOW model has given us better results than Skip-gram model. In all experiments other than the experiments in handphone domain by using word vectors created by Skip-gram model, the use of word vectors of size 300 results in better accuracy than using word vectors of size 400. In every domain, the highest accuracies are achieved by using word vectors of size 300 created by CBOW model.
 
 \begin{table*}[htbp]
-\caption{Examples of Domain-Specific Lexicon Created Using Term Frequency}
+\caption{Experimental Results of Supervised Word Classification}
 \begin{center}
-\begin{tabular}{|c|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
-\multicolumn{2}{|c|}{\textbf{Restaurant}}&\multicolumn{2}{|c|}{\textbf{Handphone}}&\multicolumn{2}{|c|}{\textbf{Digital Camera}}\\
+\textbf{Model}&\textbf{Feature}&\textbf{Domain}&\multicolumn{4}{|c|}{\textbf{With Cosine Similarity}}&\multicolumn{4}{|c|}{\textbf{With SVM Classifier}}\\
+\cline{4-11}
+&\textbf{Size}& &\multicolumn{3}{|c|}{\textbf{F1 Score}}&\textbf{Accuracy}&\multicolumn{3}{|c|}{\textbf{F1 Score}}&\textbf{Accuracy}\\
+\cline{4-6}\cline{8-10}
+& & &\textit{Aspect}&\textit{Opinion}&\textit{Other}& &\textit{Aspect}&\textit{Opinion}&\textit{Other}& \\
 \hline
-\multicolumn{2}{|c|}{\textbf{Restaurant}}&\multicolumn{2}{|c|}{\textbf{Handphone}}&\multicolumn{2}{|c|}{\textbf{Digital Camera}}\\
-\hline 
-\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}&\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}&\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}\\
+CBOW&300&Restaurant&0.567&0.576&0.583&0.575&\textbf{0.830}&\textbf{0.782}&\textbf{0.780}&\textbf{0.802} \\
+\cline{3-11}
+&&Handphone&\textbf{0.741}&\textbf{0.649}&\textbf{0.642}&\textbf{0.686}&0.833&\textbf{0.796}&\textbf{0.746}&\textbf{0.798} \\
+\cline{3-11}
+&&Digital camera&0.544&\textbf{0.707}&0.461&0.528&\textbf{0.750}&0.737&0.700&\textbf{0.730} \\
+\cline{2-11}
+&400&Restaurant&0.577&0.567&0.583&0.576&0.829&0.763&0.762&0.791 \\
+\cline{3-11}
+&&Handphone&0.736&0.635&0.635&0.678&\textbf{0.834}&0.789&0.720&0.790 \\
+\cline{3-11}
+&&Digital camera&0.526&0.568&\textbf{0.470}&0.520&0.743&\textbf{0.747}&0.692&0.726 \\
 \hline
-dishes$\vert$NOUN&lovely$\vert$ADJ&display$\vert$NOUN & huge$\vert$ADJ& camera$\vert$NOUN& large$\vert$ADJ\\
-\hline
-restaurant$\vert$NOUN&best$\vert$ADJ&price$\vert$NOUN&very\_good$\vert$ADJ&sensor$\vert$NOUN&fine$\vert$ADJ\\
-\hline
-menu$\vert$NOUN&enjoyed$\vert$VERB&feature$\vert$NOUN&quick$\vert$ADJ&quality$\vert$NOUN&detailed$\vert$ADJ  \\
-\hline
-flavour$\vert$NOUN&delicious$\vert$ADJ&phone$\vert$NOUN&clear$\vert$ADJ&model$\vert$NOUN&quick$\vert$ADJ \\
-\hline
-cooking$\vert$NOUN&good$\vert$ADJ&battery$\vert$NOUN&impressive$\vert$ADJ&lens$\vert$NOUN&excellent$\vert$ADJ \\
-\hline
-dishes$\vert$NOUN&lovely$\vert$ADJ&display$\vert$NOUN & huge$\vert$ADJ& camera$\vert$NOUN& large$\vert$ADJ\\
-\hline
-restaurant$\vert$NOUN&best$\vert$ADJ&price$\vert$NOUN&very\_good$\vert$ADJ&sensor$\vert$NOUN&fine$\vert$ADJ\\
-\hline
-menu$\vert$NOUN&enjoyed$\vert$VERB&feature$\vert$NOUN&quick$\vert$ADJ&quality$\vert$NOUN&detailed$\vert$ADJ  \\
-\hline
-flavour$\vert$NOUN&delicious$\vert$ADJ&phone$\vert$NOUN&clear$\vert$ADJ&model$\vert$NOUN&quick$\vert$ADJ \\
-\hline
-cooking$\vert$NOUN&good$\vert$ADJ&battery$\vert$NOUN&impressive$\vert$ADJ&lens$\vert$NOUN&excellent$\vert$ADJ \\
-\hline
-flavour$\vert$NOUN&delicious$\vert$ADJ&phone$\vert$NOUN&clear$\vert$ADJ&model$\vert$NOUN&quick$\vert$ADJ \\
-\hline
-cooking$\vert$NOUN&good$\vert$ADJ&battery$\vert$NOUN&impressive$\vert$ADJ&lens$\vert$NOUN&excellent$\vert$ADJ \\
+Skip-gram&300&Restaurant&0.575&\textbf{0.591}&\textbf{0.606}&\textbf{0.590}&0.798&0.709&0.755&0.760 \\
+\cline{3-11}
+&&Handphone&0.700&0.616&0.617&0.652&0.811&0.740&0.706&0.762 \\
+\cline{3-11}
+&&Digital camera&\textbf{0.578}&0.566&0.464&\textbf{0.539}&0.737&0.717&\textbf{0.701}&0.719 \\
+\cline{2-11}
+&400&Restaurant&\textbf{0.580}&0.590&0.584&0.584&0.800&0.719&0.723&0.754 \\
+\cline{3-11}
+&&Handphone&0.689&0.607&0.603&0.640&0.819&0.744&0.704&0.766 \\
+\cline{3-11}
+&&Digital camera&0.573&0.562&0.447&0.531&0.722&0.696&0.695&0.706 \\
 \hline
 \end{tabular}
-\label{tab2}
+\label{tab6}
 \end{center}
 \end{table*}
 
 \subsection{Experiments on Aspect Extraction}
-We evaluated the performance of aspect extraction methods across four datasets, listed on Table VII. Canon G3, Nikon Coolpix 4300, and Nokia 6610 datasets are a part of Customer Review Datasets created by Hu and Liu [16], while ABSA16\_Restaurants\_Train\_SB1 dataset is from SemEval 2016 Task 5: Aspect-Based Sentiment Analysis [17]. We compared the performance of modified Sequential Covering method with the baseline Sequential Covering method.
+We evaluated the performance of aspect extraction methods across four datasets, listed on Table~\ref{tab7}. Canon G3, Nikon Coolpix 4300, and Nokia 6610 datasets are a part of Customer Review Datasets created by Hu and Liu \cite{b16}, while ABSA16\_Restaurants\_Train\_SB1 dataset is from SemEval 2016 Task 5: Aspect-Based Sentiment Analysis \cite{b17}. We compared the performance of modified Sequential Covering method with the baseline Sequential Covering method.
 
 \begin{table}[htbp]
 \caption{Aspect Extraction Dataset Statistics}
@@ -379,19 +379,19 @@ Nokia 6610&518&295\\
 ABSA16\_Restaurants\_Train\_SB1&1708&1880 \\
 \hline
 \end{tabular}
-\label{tab1}
+\label{tab7}
 \end{center}
 \end{table}
 
 The results of the experiments are as follows:
 \subsubsection{Baseline Sequential Covering without Lexicon}
-On Table VIII, we could see that this method yields very high recall but low precision. The reason is because a lot of irrelevant opinion pairs are also extracted.
+On Table~\ref{tab8}, we could see that this method yields very high recall but low precision. The reason is because a lot of irrelevant opinion pairs are also extracted.
 \subsubsection{Modified Sequential Covering}
 We used the best configurations from the previous experiments to build the domain-specific lexicons that we used in this method. In all of the experiments, we used lexicons of size 1000.
 \paragraph{With Domain-Specific Lexicon Created Using Term Frequency and Cosine Similarity}
-To create the lexicon, we used 50 most frequent words expanded with 20 most similar words for each word. The results on Table VIII shows that this method managed to yield better F1 scores than the baseline method, but the recalls are lower. For Nokia 6610 dataset, this method gives the highest precision and F1 score.
+To create the lexicon, we used 50 most frequent words expanded with 20 most similar words for each word. The results on Table~\ref{tab8} shows that this method managed to yield better F1 scores than the baseline method, but the recalls are lower. For Nokia 6610 dataset, this method gives the highest precision and F1 score.
 \paragraph{With Domain-Specific Lexicon Created Using Term Frequency Only}
-We used 1000 most frequent words to create the lexicon used in this experiment. On Table VIII, we could see that in every dataset other than the Nokia 6610 dataset, this lexicon gives better results than the lexicon created with the previous approach. Even though the recalls are still lower than the baseline Sequential Covering, the F1 scores from this method are higher than the other methods.
+We used 1000 most frequent words to create the lexicon used in this experiment. On Table~\ref{tab8}, we could see that in every dataset other than the Nokia 6610 dataset, this lexicon gives better results than the lexicon created with the previous approach. Even though the recalls are still lower than the baseline Sequential Covering, the F1 scores from this method are higher than the other methods.
 
 \section{The Cost and Benefit of Using Domain-Specific Lexicon over Aspect and Opinion List}
 To build a domain-specific lexicon, we need labelled data. In our experiments, the labelling process is done manually, making it a rather costly process because it takes time and effort. Some knowledge of the domain is also necessary to make sure that the classes are labelled correctly.
@@ -427,7 +427,7 @@ ABSA16\_Restaurants\_Train\_SB1&0.509&\textbf{0.913}&0.653&0.695&0.621&0.656&\te
 \hline
 \multicolumn{10}{l}{$^{\mathrm{a}}$P: Precision; R: Recall; F: F1 Score; TF: Term Frequency; CS: Cosine Similarity; DSL: Domain-Specific Lexicon.}\\
 \end{tabular}
-\label{tab2}
+\label{tab8}
 \end{center}
 \end{table*}
 
@@ -443,17 +443,14 @@ There is a possibility of human error in the data labelling process because it i
 
 
 \section{Conclusion}
-We have adapted the works of Grefenstette and Muchemi [9] to automatically build domain-specific lexicon for the digital camera, handphone, and restaurant domain. In the development of domain-specific lexicon, we obtained the best results for word classification task by using SVM classifier with vectors of size 300 created by CBOW model. The resulting domain-specific lexicons were used in the modified version of Sequential Covering algorithm for aspect extraction [2]. Even though the recalls obtained from the modified method are still lower than the recalls obtained from baseline Sequential Covering, this method managed to yield better F1 scores than the baseline method.
+We have adapted the works of Grefenstette and Muchemi \cite{b9} to automatically build domain-specific lexicon for the digital camera, handphone, and restaurant domain. In the development of domain-specific lexicon, we obtained the best results for word classification task by using SVM classifier with vectors of size 300 created by CBOW model. The resulting domain-specific lexicons were used in the modified version of Sequential Covering algorithm for aspect extraction \cite{b2}. Even though the recalls obtained from the modified method are still lower than the recalls obtained from baseline Sequential Covering, this method managed to yield better F1 scores than the baseline method.
 
 For future works, we suggest increasing the size of the lexicons and using different combinations of most frequent words and most similar words. We also suggest reducing the scope of the domain to create smaller domains such as Nikon digital camera, Canon digital camera, and Nokia phone. By using a smaller domain, we hope that the aspects that are specific to the product would be included in the domain-specific lexicon.
 
 
 \section*{Acknowledgment}
 
-The preferred spelling of the word ``acknowledgment'' in America is without 
-an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B. 
-G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor 
-acknowledgments in the unnumbered footnote on the first page.
+The authors would like to thank LPPM-ITB for providing us with funding through the P3MI Program.
 
 \begin{thebibliography}{00}
 \bibitem{b1} B. Liu, Sentiment Analysis and Opinion Mining. San Rafael, CA: Morgan and Claypool Publishers, 2012.
